<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="198dp"
        android:layout_height="189dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="80dp"
        android:layout_height="27dp"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/login_text_size"
        android:textStyle="bold"
        android:typeface="normal"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335"
        tools:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="297dp"
        android:layout_height="52dp"
        android:background="@drawable/text_field_custom"
        android:backgroundTint="@color/black"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/email_id_login"
        android:inputType="textEmailAddress"
        android:text="  Email ID"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421"
        tools:hint="@string/email_id_login" />

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="297dp"
        android:layout_height="52dp"
        android:background="@drawable/text_field_custom"
        android:ems="10"
        android:hint="@string/login_ed_password_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/login_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Forget password?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648"
        tools:ignore="HardcodedText,TextViewEdits" />

    <Button
        android:id="@+id/Register"
        android:layout_width="297dp"
        android:layout_height="52dp"
        android:background="@drawable/button_background"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.783" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="177dp"
        android:layout_height="25dp"
        android:text="@string/dont_have_an_account_text"
        android:textSize="@dimen/login_dont_have_account_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.873"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/login_register"
        android:layout_width="75dp"
        android:layout_height="22dp"
        android:text="@string/login_register_text"
        android:textSize="@dimen/login_register_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

</androidx.constraintlayout.widget.ConstraintLayout>