<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.ForgetPasswordActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="198dp"
        android:layout_height="189dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/Forget_password"
        android:layout_width="303dp"
        android:layout_height="75dp"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        android:textSize="@dimen/forgot_password_textSize"
        android:textStyle="bold"
        android:typeface="normal"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334"
        tools:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="304dp"
        android:layout_height="134dp"
        android:gravity="center"
        android:text="@string/enter_your_user_name_and_email_addres_weill_send_you_an_e_mail_to_reset_you_r_password"
        android:textAlignment="center"
        android:textSize="@dimen/forgot_password_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <TextView
        android:id="@+id/EmailID"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="297dp"
        android:layout_height="52dp"
        android:background="@drawable/text_field_custom"
        android:backgroundTint="@color/black"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="text"
        android:text="@string/email_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62"
        tools:hint="@string/email_id"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/submit"
        android:layout_width="297dp"
        android:layout_height="52dp"
        android:background="@drawable/button_background"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <ImageView
        android:id="@+id/back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048"
        app:srcCompat="@drawable/ic_back_arrow"/>
</androidx.constraintlayout.widget.ConstraintLayout>